* minor fixes around z-index

--- a/src/components/pop/pop.scss
+++ b/src/components/pop/pop.scss
@@ -8,7 +8,7 @@ uex-pop {
   border: 1px solid rgba(0,0,0,.15);
   box-shadow: 0 5px 10px rgba(0,0,0,.12);
   border-radius: 6px;
-  z-index: 1042;
+  z-index: 10042;
   display: flex;
   flex-flow: column nowrap;
 }
