--- a/src/components/poptip/poptip.scss
+++ b/src/components/poptip/poptip.scss
@@ -5,6 +5,7 @@ uex-poptip {
 .uex-poptip {
   position: absolute;
   pointer-events: none;
+  z-index: 10042;
 
   strong {
     color: #fff;
